    <resources>
    <string name="app_name">OurNews</string>
    <string name="today_news">Today News</string>
    <string name="home">Home</string>
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="entertainment">Entertainment</string>
    <string name="technology">Technology</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username1">UserName</string>
    <string name="password1">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="existing_user_go_to_sign_in_page">Existing User! Go TO Sign In Page</string>
    <string name="register">Register</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="this_page_font_is_cutive">This Page Font Is Cutive</string>
    <string name="next">NEXT👉</string>
    <string name="specific_news">Specific News</string>
    <string name="main_heading_display_here">Main Heading Display here</string>
    <string name="main_content">Main Content</string>
    <string name="todo">TODO</string>
    <string name="developed_by_tanay">Developed By Tanay</string>
    <string name="published_at">Published At</string>
    <string name="permissions_allow">Permissions Allow</string>
    <string name="click_storage">Click Storage</string>
    <string name="click_location">Click Location</string>
    <string name="please_allow_permissions">Please Allow Permissions</string>
    <string name="next3">Next</string>
    <string name="themes">Themes</string>
    <string name="email_gmail">Email / Gmail</string>
    <string name="upload">Upload</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_title">Enter Title</string>
    <string name="title_activity_blog">Blog</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>