<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/clock">


    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="102dp"
        android:fontFamily="casual"
        android:text="@string/textview"
        android:textColor="#D81B60"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/day"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/month"
        android:layout_alignStart="@+id/month"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="81dp"
        android:fontFamily="casual"
        android:text="@string/textview1"
        android:textColor="#F8BBD0"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/year"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/month"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="36dp"
        android:layout_toEndOf="@+id/month"
        android:fontFamily="casual"
        android:text="@string/textview2"
        android:textColor="#D81B60"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="396dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="302dp"
        android:fontFamily="@font/cutive"
        android:text="@string/this_page_font_is_cutive"
        android:textColor="#FFB300"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="227dp"
        android:layout_height="78dp"
        android:layout_below="@+id/tv"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#5064AC"
        android:fontFamily="@font/autour_one"
        android:text="@string/next"
        android:textColor="#000000"
        android:textSize="35sp" />

</RelativeLayout>