<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="305dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_margin="2dp"
        android:id="@+id/cardView"
        app:cardCornerRadius="10dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainheading"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:padding="5dp"
                android:text="@string/main_heading_display_here"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="9"
                    android:padding="6dp"
                    android:id="@+id/content"
                    android:textSize="15sp"
                    android:text="@string/main_content">

                </TextView>

                <ImageView
                    android:id="@+id/imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_foreground"
                    tools:ignore="ImageContrastCheck">

                </ImageView>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developed_by_tanay"
                android:textSize="14sp"
                android:textStyle="italic"
                android:id="@+id/author"
                android:textColor="#008080"
                android:padding="5dp">
            </TextView>


            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/published_at"
                android:textColor="#827717"
                android:textSize="12sp"
                android:textStyle="bold"></TextView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>