<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".RActivity">


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="42dp"
        android:autofillHints=""
        android:hint="@string/password1"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#753A25"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />


    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerInParent="true"
        android:layout_marginTop="34dp"
        android:backgroundTint="#FFFFD2"
        android:text="@string/register"
        android:textColor="#FF5252"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnsignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:backgroundTint="#C5FAD5"
        android:text="@string/existing_user_go_to_sign_in_page"
        android:textColor="#F44336"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_below="@+id/btnsignin"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#FFEB3B"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="31dp"
        android:text="@string/developed_by_tanay"
        android:textAlignment="center"
        android:textColor="#FCE4EC"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Email / Gmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#753A25"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />


</RelativeLayout>